<resources>
    <string name="app_name">CultuCesar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Destinos</string>
    <string name="menu_slideshow">Eventos Culturales</string>
    <string name="menu_sitios_interes">Sitios de Interes</string>
    <string name="menu_sitios_recreativos">Sitios Recreativos</string>
    <string name="menu_actividades">Actividades</string>
    <string name="menu_acerca_departamento">Acerca del Departamento</string>


    <string name="home_second">Home Second</string>
</resources>
